create github pages

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </span>
             <span class="navbar-caption-wrap"><a class="navbar-caption text-warning display-2" href="index.html#top">
-                    Flynn O'Leary</a></span>
+                    Flynn&nbsp; 027 288 058</a></span>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -151,13 +151,13 @@
 <section class="slider1 cid-sIuiNAWMur" id="slider1-6">
     
     <div class="container-fluid">
-        <div class="carousel slide carousel-fade" id="sIutIgc43T" data-ride="carousel" data-interval="5000">
+        <div class="carousel slide carousel-fade" id="sIuLASHRqb" data-ride="carousel" data-interval="5000">
             <ol class="carousel-indicators">
-                <li data-slide-to="0" class="active" data-target="#sIutIgc43T"></li>
-                <li data-slide-to="1" data-target="#sIutIgc43T"></li>
-                <li data-slide-to="2" data-target="#sIutIgc43T"></li>
-                <li data-slide-to="3" data-target="#sIutIgc43T"></li>
-                <li data-slide-to="4" data-target="#sIutIgc43T"></li>
+                <li data-slide-to="0" class="active" data-target="#sIuLASHRqb"></li>
+                <li data-slide-to="1" data-target="#sIuLASHRqb"></li>
+                <li data-slide-to="2" data-target="#sIuLASHRqb"></li>
+                <li data-slide-to="3" data-target="#sIuLASHRqb"></li>
+                <li data-slide-to="4" data-target="#sIuLASHRqb"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item slider-image item active">
@@ -241,11 +241,11 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sIutIgc43T">
+            <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#sIuLASHRqb">
                 <span class="mbri-left" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sIutIgc43T">
+            <a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#sIuLASHRqb">
                 <span class="mbri-right" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -363,7 +363,7 @@
         <div class="row justify-content-center">
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4qlsfxeV+P3KM7CXx37+gG+zi6X4mc3XNjbh9MZKuQKo3G4hQaRLngxTMyY/iD2MsldgIKwbE+C9Jsr3Ui68p6Zt5SuaTXs0NtIVmjL9EoRhQr/YTy89e/bNAI8N+P02.m4MwnkR04POP8sbSSlL/VETRkTzn3nlxWJ2s9i+zMwJbU53uZ5aLi8PMHbRb39xjQD22ZrepbRpRzVSeuoEq7N/yHaLo7Fmx70nibQJbjuBJCpZML8fSisdhdPvI4/8v">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vWhiAwkYf8m+L+RVbT0dYMKG22wXisTB+J6+psNsAe8QaGkLIBSKNYqLq4HdiOGVwqGl5Pn76pqGbEEv3YTTXDBMmGBB8+CZj9gXWby13upQ0MP0d3fG1kHNMdygmb9T.c3wXsPDbN6mzQMFYAhGId1/kssuK/snJvteQbFrhS/tVpzWhU8X+UjXs6lHWU6wAxHp3EU9lh/wikCxqMqRJGVc7OMk0pZVm/9XnLb/VXcWoQEMOIk4Z6fwYUvD42DMZ">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -403,7 +403,7 @@
        <div class="container-fluid text-center">
            <div class="row justify-content-center">
              <div class="col-md-6 col-sm-12">
-                 <h3 class="inner-text mbr-fonts-style content-text display-7">Powered by&nbsp;Flynn O'Leary.co.nz&nbsp;&nbsp;2021 ©&nbsp;Copyright</h3>
+                 <h3 class="inner-text mbr-fonts-style content-text display-7">LET'S GET IT SOLD!<br>Powered by&nbsp;Flynn O'Leary.co.nz&nbsp;&nbsp;2021 ©&nbsp;Copyright</h3>
              </div>
              <div class="social-media col-md-6 col-sm-12">
                   <ul>
